--- a/bin/install
+++ b/bin/install
@@ -1,6 +1,6 @@
 #!/bin/bash
 
-DOTPATH=$(cd $(dirname "${0}") && pwd)
+DOTPATH=$(cd $(dirname "${0}")/../ && pwd)
 
 if [ -z "${HOME}" ]; then
   HOME=$(cd ~ && pwd)
@@ -11,6 +11,6 @@ for f in ${DOTPATH}/.??*; do
   dotfile=$(basename $f)
   [ "${dotfile}" == ".git" ] && continue
   if [[ "${dotfile}" =~ ^\.* ]]; then
-     cp -rn "${HOME}/${dotfile}" ${DOTPATH}
+    ln -snfv "${DOTPATH}/${dotfile}" "${HOME}/${dotfile}"
   fi
 done
